OpenEXR Output Appears to be broken #29683

Closed
opened 2011-12-23 17:53:30 +01:00 by Robert Nathan Garlington · 3 comments

%%%At first I noticed that opening a previous version file (from 2.58) that already had file output nodes setup with the correct OpenEXR settings, instead defaulted to a targa when opening the file in 2.61. So I manually reset them all to be OpenEXR again.

However when I had set it up again with the correct settings including zip compression, I noticed that my file sizes went from 500k to 20mbs. I tried every setting and compression variation but there was no difference. It appears that the output doesn't recognize any compression format and is instead ignoring my settings and making every file uncompressed. To be sure I opened a fresh file with basic geometry and tried the same thing but the compression still doesn't work.%%%

%%%At first I noticed that opening a previous version file (from 2.58) that already had file output nodes setup with the correct OpenEXR settings, instead defaulted to a targa when opening the file in 2.61. So I manually reset them all to be OpenEXR again. However when I had set it up again with the correct settings including zip compression, I noticed that my file sizes went from 500k to 20mbs. I tried every setting and compression variation but there was no difference. It appears that the output doesn't recognize any compression format and is instead ignoring my settings and making every file uncompressed. To be sure I opened a fresh file with basic geometry and tried the same thing but the compression still doesn't work.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r42848.%%%

%%%fixed r42848.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29683
No description provided.