fix [#29683] OpenEXR Output Appears to be broken

own error with moving image settings.